# doc-review-android-sdk

./: README.md  build.gradle.kts.blah  settings.gradle.kts
docs/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
docs/com/signalquest/api/: ApiException.html  Location.html  MessageHandler.MessageReceiver.html  MessageHandler.html  NtripParser.AuthorizationFailure.html  NtripParser.RtcmReceiver.html  NtripParser.html  ScanStatus.html  Status.html  package-summary.html  package-tree.html
gradle/wrapper/: gradle-wrapper.properties
signalquest/: build.gradle.kts
signalquest/src/androidTest/java/com/signalquest/api/: MessageHandlerTest.java  NtripParserTest.java
signalquest/src/androidTest/java/com/signalquest/swig/ntrip/: NtripTest.java
signalquest/src/androidTest/java/com/signalquest/swig/sqsp/: SqspTest.java
signalquest/src/androidTest/java/com/signalquest/swig/sqtp/: SqtpTest.java
signalquest/src/main/cpp/: CMakeLists.txt
signalquest/src/main/cpp/ntrip/: CMakeLists.txt  NTRIPBuffer.h  crc24q.h  ntrip.i  ntrip_wrap.c
signalquest/src/main/cpp/sqsp/: CMakeLists.txt  sqsp.i  sqspTypeWrap.h  sqspTypes.h  sqsp_wrap.c
signalquest/src/main/cpp/sqtp/: CMakeLists.txt  os_target.h  sqtp.i  sqtpCRC.h  sqtpFrame.h  sqtpLegacy.h  sqtpManager.h  sqtpManager_config.h  sqtpStatus.h  sqtpSubframeIDs.h  sqtp_wrap.c
signalquest/src/main/java/com/signalquest/api/: ApiException.java  Location.java  MessageHandler.java  NtripParser.java  ScanStatus.java  StableBuffer.java  Status.java
signalquest/src/main/java/com/signalquest/swig/ntrip/: Error_Status_t.java  NTRIP_Header_Info_t.java  NTRIP_Parse_Context_State_t.java  NTRIP_Parse_Context_t.java  NTRIP_Parse_Poll_t.java  NTRIP_Parse_Return_t.java  (+7 more)
signalquest/src/test/java/com/signalquest/example/: ExampleUnitTest.kt
(+30 files in other folders)
